bad/assign_field_string_new_class_bool.example_compiler_output
ERROR
[1mbad/assign_field_string_new_class_bool.lat:7:14: [1;31merror: [0;1massigning to `string` from incompatible type `boolean`[m
	(new C).fld = true;
	            [1;32m^[m
